修改EventQueue.Java类,使用redis的List来存储Event

--- a/web-app/WEB-INF/classes/pushlet.properties
+++ b/web-app/WEB-INF/classes/pushlet.properties
@@ -82,9 +82,9 @@ session.timeout.mins=5
 # Properties for per-client data event queue
 
 # Size for
-queue.size=24
+queue.size=256
 queue.read.timeout.millis=20000
-queue.write.timeout.millis=20
+queue.write.timeout.millis=20000
 
 #
 # LISTENING MODE
@@ -126,3 +126,10 @@ poll.refresh.timeout.millis=60000
 # server provides a random time between these values
 poll.refresh.wait.min.millis=6000
 poll.refresh.wait.max.millis=10000
+
+#@wjw_add for redis
+redis.debug=true
+redis.serverlist=192.168.0.80:6379
+redis.minconn=5
+redis.maxconn=100
+redis.socketto=6000
