去掉使用HttpSession的ID的来作为Session的ID的方式

--- a/web-app/WEB-INF/classes/pushlet.properties
+++ b/web-app/WEB-INF/classes/pushlet.properties
@@ -64,9 +64,9 @@ sources.activate=true
 
 
 # algoritm to generate session key:
-# values: "randomstring" (default) or "uuid" or "httpSessionid".
+# values: "randomstring" (default) or "uuid".
 # session.id.generation=uuid
-session.id.generation=httpSessionid
+session.id.generation=randomstring
 
 # length of generated session key when using "randomstring" generation
 session.id.size=10
