实现了多节点集群(一个几点发消息,另一个订阅的节点可以收到)

--- a/web-app/WEB-INF/classes/pushlet.properties
+++ b/web-app/WEB-INF/classes/pushlet.properties
@@ -65,8 +65,8 @@ sources.activate=true
 
 # algoritm to generate session key:
 # values: "randomstring" (default) or "uuid".
-# session.id.generation=uuid
-session.id.generation=randomstring
+session.id.generation=uuid
+#session.id.generation=randomstring
 
 # length of generated session key when using "randomstring" generation
 session.id.size=10
@@ -130,6 +130,7 @@ poll.refresh.wait.max.millis=10000
 #@wjw_add for redis
 redis.debug=true
 redis.serverlist=192.168.0.80:6379
+#redis.serverlist=10.211.55.2:6379
 redis.minconn=5
 redis.maxconn=100
 redis.socketto=6000
