--- a/web-app/WEB-INF/classes/sources.properties
+++ b/web-app/WEB-INF/classes/sources.properties
@@ -13,12 +13,12 @@
 # Define Pull Sources here. These classes must be derived from
 # nl.justobjects.pushlet.core.EventPullSource
 # Inner classes are separated with a $ sign from the outer class. 
-#source1=nl.justobjects.pushlet.test.TestEventPullSources$TemperatureEventPullSource
-#source2=nl.justobjects.pushlet.test.TestEventPullSources$SystemStatusEventPullSource
-#source3=nl.justobjects.pushlet.test.TestEventPullSources$PushletStatusEventPullSource
-#source4=nl.justobjects.pushlet.test.TestEventPullSources$AEXStocksEventPullSource
-#source5=nl.justobjects.pushlet.test.TestEventPullSources$WebPresentationEventPullSource
-#source6=nl.justobjects.pushlet.test.TestEventPullSources$PingEventPullSource
+source1=nl.justobjects.pushlet.test.TestEventPullSources$TemperatureEventPullSource
+source2=nl.justobjects.pushlet.test.TestEventPullSources$SystemStatusEventPullSource
+source3=nl.justobjects.pushlet.test.TestEventPullSources$PushletStatusEventPullSource
+source4=nl.justobjects.pushlet.test.TestEventPullSources$AEXStocksEventPullSource
+source5=nl.justobjects.pushlet.test.TestEventPullSources$WebPresentationEventPullSource
+source6=nl.justobjects.pushlet.test.TestEventPullSources$PingEventPullSource
 
 # TO BE DONE IN NEXT VERSION
 # define Push Sources here. These must implement the interface
