--- a/web-app/WEB-INF/classes/pushlet.properties
+++ b/web-app/WEB-INF/classes/pushlet.properties
@@ -127,10 +127,17 @@ poll.refresh.timeout.millis=60000
 poll.refresh.wait.min.millis=6000
 poll.refresh.wait.max.millis=10000
 
-#@wjw_add for redis
-redis.debug=true
-#redis.serverlist=192.168.0.80:6379
-redis.serverlist=10.211.55.2:6379
-redis.minconn=5
-redis.maxconn=100
-redis.socketto=6000
+#@wjw_add for mongodb
+mongodb.serverlist=127.0.0.1:27017
+mongodb.autoConnectRetry=true
+mongodb.connectionsPerHost=10
+mongodb.threadsAllowedToBlockForConnectionMultiplier=5
+mongodb.maxWaitTime=60000
+mongodb.slaveOk=true
+mongodb.socketKeepAlive=true
+mongodb.socketTimeout=0
+mongodb.connectTimeout=0
+mongodb.safe=true
+mongodb.w=1
+mongodb.wtimeout=0
+mongodb.fsync=false
