@wjw_optimize: 为了加快速度,对象的序列化采用Jackson Json.

--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/el-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/annotations-api.jar"/>
 	<classpathentry kind="lib" path="thirdparty/wjw-redismanager.jar"/>
+	<classpathentry kind="lib" path="web-app/WEB-INF/lib/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="web-app/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
