@wjw_change: 修改README,添加对redis里数据结构的解释

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Mon Oct 24 09:55:34 GMT+08:00 2011
+#Tue Jan 31 11:40:45 GMT+08:00 2012
 eclipse.preferences.version=1
 encoding//web-app/ajax-1.html=UTF-8
 encoding//web-app/ajax-2.html=UTF-8
 encoding//web-app/ajax-3.html=UTF-8
 encoding/<project>=UTF-8
+encoding/README=GBK
